Small spacing fix

--- a/_sass/pages/_bzrx-token.scss
+++ b/_sass/pages/_bzrx-token.scss
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   @media screen and (min-width: 992px) {
-    padding: 105px 0 0 0;
+    padding: 105px 0 60px 0;
   }
   @media screen and (max-width: 991px) {
     padding: 0 0 15px 0;
